--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ HTTPS_PORT=443
 DASHBOARD_PORT=8080
 # Directorio para logs
 DIR_LOGS=./logs
+# Zona horaria (ejemplo: UTC, America/La_Paz, etc.)
+TZ=UTC
