feat: add NETWORK_MODE variable to .env.example, update traefik.yml and docker-compose.yml for network configuration

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ HTTP_PORT=80
 HTTPS_PORT=443
 # Puerto del dashboard de Traefik
 DASHBOARD_PORT=8080
+# Modo de red para Traefik (bridge o host)
+NETWORK_MODE=bridge
 # Directorio para logs
 DIR_LOGS=./logs
 # Zona horaria (ejemplo: UTC, America/La_Paz, etc.)
