--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,31 +4,7 @@ name: traefik
 
 services:
   traefik:
-    image: traefik:3.5
-    container_name: traefik
-    restart: unless-stopped
-    # command: [] # Toda la configuración está en config/traefik.yml
-    ports:
-      - "${HTTP_PORT:-80}:80"           # HTTP
-      - "${HTTPS_PORT:-443}:443"        # HTTPS
-      - "${DASHBOARD_PORT:-8080}:8080"  # Dashboard
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/traefik.yml:/traefik.yml:ro
-      - ${DIR_LOGS:-./logs}/traefik:/var/log/traefik
-    environment:
-      - TZ=${TZ:-UTC}
-    network_mode: ${NETWORK_MODE:-bridge}
-    networks:
-      - traefik
-    labels:
-      # Habilita Traefik para este contenedor y expone el dashboard en traefik.localhost
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`traefik.localhost`)"
-      - "traefik.http.routers.api.service=api@internal"
-      - "traefik.http.routers.api.entrypoints=web"
-      - "traefik.http.routers.api.tls=true"
-
-networks:
-  traefik:
-    driver: bridge
+    network_mode: host
+    extends:
+      service: traefik
+      file: services/traefik.yml
