--- a/config/traefik.yml
+++ b/config/traefik.yml
@@ -9,11 +9,11 @@ providers:
 
 entryPoints:
   web:
-    address: ":${HTTP_PORT:-80}"
+    address: ":80"
   websecure:
-    address: ":${HTTPS_PORT:-443}"
+    address: ":443"
   dashboard:
-    address: ":${DASHBOARD_PORT:-8080}"
+    address: ":8080"
 
 log:
   level: INFO
