--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,35 @@
 # Author: Bismarck Villca <bismarck.villca@gmail.com>
 name: traefik
 
+networks:
+  traefik:
+    name: traefik
+    driver: bridge
+  traefik_router:
+    name: traefik_router
+    driver: bridge
+
 services:
   traefik:
-    network_mode: host
-    extends:
-      service: traefik
-      file: services/traefik.yml
+    image: traefik:3.5
+    container_name: traefik
+    restart: unless-stopped
+    # command: [] # Toda la configuración está en config/traefik.yml
+    networks:
+      - traefik
+      - traefik_router
+    ports:
+      - "${HTTP_PORT:-80}:80"           # HTTP
+      - "${HTTPS_PORT:-443}:443"        # HTTPS
+      - "${DASHBOARD_PORT:-8080}:8080"  # Dashboard
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ../config/traefik.yml:/traefik.yml:ro
+      - ${DIR_LOGS:-../logs}/traefik:/var/log/traefik
+    environment:
+      - TZ=${TZ:-UTC}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.rule=Host(`traefik.localhost`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.entrypoints=web"
