--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - "${DASHBOARD_PORT:-8080}:8080"  # Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/traefik.yml:/traefik.yml:ro
-      - ./config/dynamic.yml:/dynamic.yml:ro
+      - ./config/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ./config/dynamic.yml:/etc/traefik/dynamic.yml:ro
       - ${DIR_LOGS:-./logs}/traefik:/var/log/traefik
     environment:
       - TZ=${TZ:-UTC}
