--- a/config/dynamic.yml
+++ b/config/dynamic.yml
@@ -1,3 +1,11 @@
 # Configuración dinámica de Traefik
 # Este archivo permite configuraciones que se recargan automáticamente sin reiniciar Traefik
 # Author: Bismarck Villca <bismarck.villca@gmail.com>
+
+http:
+  middlewares:
+    # Middleware de reintento para mejorar la resiliencia
+    retry:
+      retry:
+        attempts: 3
+        initialInterval: "500ms"
