feat: add Docker socket endpoint to Traefik configuration
Signed-off-by: Bismarck Villca <bismarck.villca@gmail.com>

--- a/config/traefik.yml
+++ b/config/traefik.yml
@@ -9,6 +9,7 @@ api:
 
 providers:
   docker:
+    endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
   # Proveedor de archivos para configuración dinámica
   file:
